Cambios de nombre en el al CSRF Token, y mejoras a la pestaña de Coordinación y a la de Documentos en cuanto a los filtros y a la visualización de los propios programas vs otros programas

--- a/.gitignore
+++ b/.gitignore
@@ -72,12 +72,14 @@ instance/
 tests/prueba.py
 
 #database
-#database/
+database/
 
 #Variables de entorno
 .env
+.env.dev-real
 docker/.env.prod
 docker/.env.dev
 
 #claude local
 .claude/
+
